# BOULDER

./: .gitignore  CMakeLists.txt  Engine.h  NETWORKING.md  boulder_cgo.cpp  boulder_cgo.h  main.cpp  main.h  ui_renderer.cpp  ui_renderer.h
.github/: FUNDING.yml
go-bindings/: .gitignore  README.md  boulder.go  go.sum  input.go  network.go  pipeline.go  renderer.go  shader.go  simple_game  window.go  world.go
go-bindings/examples/: examples  multiplayer_game.go  network_demo.go  network_simple.go  p2p_demo.go  simple_game  simple_game.go
go-bindings/examples/assets/: mohrtana.glb  mohrtana.gltf
go-bindings/examples/shaders/: cube.mesh  cube.mesh.spv  model.frag  model.mesh
